--- a/src/css/style.less
+++ b/src/css/style.less
@@ -42,7 +42,7 @@ ul, ol {
   list-style-type: square !important;
   li span {
     font-size: 14px !important;
-    color: #4a4a4a;
+    color: #333;
   }
 }
 ol {
@@ -186,7 +186,7 @@ textarea {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 15px;
   box-shadow: 1px 1px 3px #666;
 }
 
