--- a/src/css/prettify.less
+++ b/src/css/prettify.less
@@ -196,11 +196,11 @@ ol.linenums {
 }
 
 .code-in-text {
-  color: #585858;
-  background: #f3f1f1;
+  color: #ff502c;
+  background-color: #fff5f5;
   span {
-    color: #585858;
-    background: #f3f1f1;
+    color: #ff502c;
+    background-color: #fff5f5;
     display: inline-block;
     padding: 0 2px;
     font-size: 14px;
